# cyborg

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml
scripts/: init_comics.sh
src/: args.rs  comic.rs  format.rs  lib.rs  log.rs  logger.rs  main.rs  organise.rs  process.rs
src/comic/: error.rs  format.rs  meta.rs  parse.rs  regex.rs
src/comic/format/: error.rs
src/command/: args.rs
src/organise/: organiser.rs  settings.rs
src/process/: processor.rs  settings.rs
