[package]
name = "cyborg"
version = "0.1.0"
authors = ["eth0net <eth0net@pm.me>"]
edition = "2021"
description = "A simple comic book organisation tool"
license = "MIT"
keywords = ["comics", "organise"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
once_cell = "1.19.0"
regex = "1.10.3"
