[package]
name = "cyborg"
version = "0.10.1"
authors = ["eth0net <eth0net@pm.me>"]
edition = "2021"
description = "A simple comic book organisation tool"
license = "MIT"
keywords = ["comics", "organise"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
regex = "1.10.3"
thiserror = "1.0.58"
